--- a/projeto03.ipynb
+++ b/projeto03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,21 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'message' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\franc\\Documents\\CursoPython_Entregas\\projeto02_1.ipynb Cell 2\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/franc/Documents/CursoPython_Entregas/projeto02_1.ipynb#W1sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/franc/Documents/CursoPython_Entregas/projeto02_1.ipynb#W1sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m         \u001b[39mprint\u001b[39m (\u001b[39m'\u001b[39m\u001b[39mOutros tipos de erro\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/franc/Documents/CursoPython_Entregas/projeto02_1.ipynb#W1sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m notification\u001b[39m.\u001b[39mnotify(\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/franc/Documents/CursoPython_Entregas/projeto02_1.ipynb#W1sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m         title\u001b[39m=\u001b[39m\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mATENÇÃO: \u001b[39m\u001b[39m{\u001b[39;00mmessage\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/franc/Documents/CursoPython_Entregas/projeto02_1.ipynb#W1sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m         , message \u001b[39m=\u001b[39m \u001b[39mstr\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mCarregamento da base \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m. \u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m (base,data))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/franc/Documents/CursoPython_Entregas/projeto02_1.ipynb#W1sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m         , app_name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/franc/Documents/CursoPython_Entregas/projeto02_1.ipynb#W1sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m         , timeout\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'message' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def extracao(url,base):\n",
     "    data = str(datetime.now())\n",
@@ -37,7 +25,7 @@
     "    status_code = req.status_code\n",
     "    data_json = req.json()\n",
     "    if status_code == 200:\n",
-    "        base = pd.DataFrame(data_json)\n",
+    "        df = pd.DataFrame(data_json)\n",
     "        message = 'Requisição realizada com sucesso'\n",
     "        notification.notify(\n",
     "        title=f'ATENÇÃO: {message}'\n",
@@ -45,7 +33,7 @@
     "        , app_name='alerta'\n",
     "        , timeout=10)\n",
     "\n",
-    "        return(base)\n",
+    "        return(df)\n",
     "        \n",
     "    elif status_code >= 400:\n",
     "        message = 'Erro na requisição'\n",
@@ -54,7 +42,7 @@
     "    else:\n",
     "        print ('Outros tipos de erro')\n",
     "    \n",
-    "notification.notify(\n",
+    "    notification.notify(\n",
     "        title=f'ATENÇÃO: {message}'\n",
     "        , message = str('Carregamento da base %s. \\n %s' % (base,data))\n",
     "        , app_name=''\n",
@@ -63,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
